# PRACTICA_ITLABS

./: README.md  docker-compose.yaml  Отчет Backend.docx
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_06_23_1631-35cd26d0fc7e_add_admins.py  2025_06_23_1632-1dbf7453dd9c_add_stand_bies.py  2025_06_23_1724-bda5778a11dd_add_documents.py  2025_06_23_1729-2f650b294d43_add_videos.py  2025_06_23_1735-1a9618cf4620_add_types.py  2025_06_23_1739-34b3a6c80fc7_add_sub_types.py  2025_06_23_1742-8fcad086d66a_edit_documents.py  2025_06_23_1747-a79729cc0698_seeder_admins.py  2025_06_24_2032-8dd8f9835318_all_seeders.py
backend/src/: __init__.py  config.py  dao.py  database.py  main.py  models.py
backend/src/admins/: main.py  models.py  utils.py  views.py
backend/src/documents/: models.py  schemas.py
backend/src/stand_bies/: dao.py  models.py  router.py  schemas.py  service.py
backend/src/sub_types/: dao.py  models.py  router.py  schemas.py  service.py
backend/src/types/: dao.py  models.py  router.py  schemas.py  service.py
backend/src/videos/: models.py  schemas.py
frontend/: .env  tailwind.config.js.jsx
frontend/src/: index.css  main.jsx  router.jsx
frontend/src/components/: FilterPanel.jsx  Header.jsx  HeroCard.jsx  HeroGrid.jsx  Loader.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: HomePage.jsx
